[package]
name = "Crowdfunding"
version = "0.0.1"
authors = [ "you",]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.6.2"

[dependencies.elrond-wasm-derive]
version = "0.6.2"

[dependencies.elrond-wasm-node]
version = "0.6.2"

[dependencies.elrond-wasm-debug]
version = "0.6.2"
