[package]
name = "Crowdfunding-wasm"
version = "0.0.1"
authors = [ "you",]
edition = "2018"

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.Crowdfunding]
path = ".."

[dependencies.elrond-wasm-output]
features = [ "wasm-output-mode",]
